--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "zerosonesfun/flarum-ext-sm2",
-    "description": "Play audio URLs",
+    "description": "Play audio URLs.",
     "type": "flarum-extension",
     "license": "MIT",
     "require": {
